--- a/style.css
+++ b/style.css
@@ -271,3 +271,38 @@ h3{
         margin-right: 15px;
     }
 }
+
+ /*------call to action-----*/
+.cta
+{
+    margin: 100px auto;
+    width: 80%;
+    background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,0.7)),url(eduford_img/banner2.jpg);
+    background-position: center;
+    background-size: cover;
+    border-radius: 10px;
+    text-align: center;
+    padding: 100px 0;
+}
+
+.cta h1{
+    color: #fff;
+    margin-bottom: 40px;
+    padding: 0;
+}
+@media(max-width: 700px){
+    .cta h1{
+        font-size: 24px;
+    }
+}
+
+/* --------- footer --------- */
+.footer{
+    width: 100%;
+    text-align:center;
+    padding: 30px 0;
+}
+.footer h4{
+    margin-bottom: 20px;
+    font-weight: 600;
+}
