--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ h3{
     transition: 0.5;
 }
 .layer:hover{
-    background: rgb(142, 202, 230);
+    background: rgba(0.43, 0.12, 0, 0.08);
 }
 .layer h3{
     width: 100%;
@@ -243,7 +243,7 @@ h3{
     border-radius: 10px;
     margin-bottom: 5%;
     text-align: left;
-    background: #3066be;
+    background: #87CEEB;
     padding: 25px;
     cursor: pointer;
     display: flex;
