--- a/style.css
+++ b/style.css
@@ -243,7 +243,7 @@ h3{
     border-radius: 10px;
     margin-bottom: 5%;
     text-align: left;
-    background: #87CEEB;
+    background: #e5dada;
     padding: 25px;
     cursor: pointer;
     display: flex;
