--- a/style.css
+++ b/style.css
@@ -137,7 +137,7 @@ p{
 }
 .course-col{
     flex-basis: 31%;
-    background: #e5dada;
+    background: #fff3f3;
     border-radius: 10px;
     margin-bottom:  5%;
     padding: 20px 12px;
@@ -243,7 +243,7 @@ h3{
     border-radius: 10px;
     margin-bottom: 5%;
     text-align: left;
-    background: #e5dada;
+    background: #fff3f3;
     padding: 25px;
     cursor: pointer;
     display: flex;
